fix(popover-manager, tooltip-manager): Misalignment of tooltips in FireFox #3900 (#4069)

--- a/src/components/tooltip-manager/tooltip-manager.scss
+++ b/src/components/tooltip-manager/tooltip-manager.scss
@@ -1,3 +1,3 @@
 :host {
-  @apply block;
+  @apply block relative;
 }
